--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,60 @@
-﻿absl-py==2.1.0
-altair==5.4.1
+absl-py==2.1.0
+astor==0.8.1
 astunparse==1.6.3
-attrs==24.2.0
-blinker==1.8.2
-cachetools==5.5.0
+cachetools==4.2.4
 certifi==2024.8.30
 charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-contourpy==1.3.0
-cycler==0.12.1
-Flask==3.0.3
+cycler==0.11.0
 flatbuffers==24.3.25
-fonttools==4.54.1
-gast==0.6.0
-gitdb==4.0.11
-GitPython==3.1.43
+fonttools==4.38.0
+gast==0.2.2
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.66.2
-h5py==3.12.1
+grpcio==1.62.3
+h5py==3.8.0
 idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-keras==3.6.0
-kiwisolver==1.4.7
+importlib-metadata==6.7.0
+joblib==1.3.2
+keras==2.11.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
 libclang==18.1.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.1
+Markdown==3.4.4
+MarkupSafe==2.1.5
 matplotlib==3.5.3
-mdurl==0.1.2
-ml-dtypes==0.4.1
-namex==0.0.8
-narwhals==1.9.4
-numpy==1.26.4
+numpy==1.21.6
+oauthlib==3.2.2
 opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.1
-pandas==2.2.3
-pillow==10.4.0
-protobuf==4.25.5
-pyarrow==17.0.0
-pydeck==0.9.1
-Pygments==2.18.0
+opt-einsum==3.3.0
+orderdict==2020.12.3
+packaging==24.0
+pandas==1.1.5
+Pillow==9.5.0
+protobuf==3.19.6
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
-referencing==0.35.1
-requests==2.32.3
-rich==13.9.2
-rpds-py==0.20.0
-scipy==1.14.1
+requests==2.31.0
+requests-oauthlib==2.0.0
+rsa==4.9
+scipy==1.7.3
 six==1.16.0
-smmap==5.0.1
-streamlit==1.39.0
-tenacity==9.0.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
+tensorboard==2.0.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.0.0
+tensorflow-estimator==2.0.1
+tensorflow-intel==2.11.0
 tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-threadpoolctl==3.5.0
-toml==0.10.2
-tornado==6.4.1
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-watchdog==5.0.3
-Werkzeug==3.0.4
+termcolor==2.3.0
+threadpoolctl==3.1.0
+typing==3.7.4.3
+typing_extensions==4.7.1
+urllib3==2.0.7
+Werkzeug==2.2.3
 wrapt==1.16.0
+zipp==3.15.0
